--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="style17.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet">
 
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
@@ -193,6 +193,7 @@
     <li><a href="#"><i class="bi bi-heart"></i></a></li>
     <li><a href="#"><i class="bi bi-person"></i></a></li>
 </div>
-    <script type="text/javascript" src="script17.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
+
